--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://netease-cloud-music-lohr3alud-lycheeuaena.vercel.app"
+      "destination": "https://netease-cloud-music-lohr3alud-lycheeuaena.vercel.app/:match*"
     }
   ]
 }
